tests/parser/command_form/invalid_05.m.out
In invalid_05.m, line 6
|     foo +kitten
|         ^ error: expected NEWLINE, found OPERATOR instead
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
