tests/parser/command_form/invalid_05.m
function invalid_05()
    kitten = 42;
    foo = 5; % redefinition
    foo +kitten
    foo + kitten
    foo+ kitten
    foo+kitten
end
